Actualización al CSS y html Agregué un poco de contenido y corregí errores de ortografía en los html, agregué media queries nuevos e hice todas las imágenes de juegos y las que faltaban de anime e index responsive. Corregí un par de links rotos, agregué paddings y retoques estéticos.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="./img/logo.png" alt="Logo Principal de Aprende YUGIOH!">
+        <a href="index.html"><img src="./img/logo.png" alt="Logo Principal de Aprende YUGIOH!"></a>
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
@@ -30,9 +30,9 @@
                 <article class="c-i">
                     <div class="c-a">
                         <h2>¿Qué es YuGiOh?</h2>
-                        <p>Yu-Gi-Oh! (遊☆戯☆王 Yūgiō, traducido del japonés "Rey de los Juegos") es una popular franquicia de manga y anime japonés creada por Kazuki Takahashi que involucra principalmente a personajes que juegan un juego de cartas llamado Duelo de Monstruos (Duel Monsters) donde cada jugador armaba un Deck (baraja) de Cartas de Monstruos, Cartas Mágicas y Cartas de Trampas para derrotar a su adversario.
-                        Comenzó como un manga en Japón en 1996. La franquicia de Yu-Gi-Oh! ha tenido un inmenso éxito a nivel global, originando varias series de anime. En la vida real se lanzaron las cartas del anime y existen videojuegos, juguetes y muchos otros productos.
-                        El universo de Yu-Gi-Oh! se compone del juego de cartas intercambiables, series de manga y anime, películas y numerosos videojuegos, entre otros.</p>
+                        <p>Yu-Gi-Oh! (遊☆戯☆王 Yūgiō, traducido del japonés "Rey de los Juegos") es una popular franquicia de manga y anime japonés creada por Kazuki Takahashi que involucra principalmente a personajes que juegan un juego de cartas llamado <b>Duelo de Monstruos</b> (Duel Monsters) donde cada jugador armaba un Deck (baraja) de Cartas de Monstruos, Cartas Mágicas y Cartas de Trampas para derrotar a su adversario.
+                        Comenzó como un manga en Japón en 1996. La franquicia de Yu-Gi-Oh! ha tenido un inmenso éxito a nivel global, originando varias series de anime. 
+                        El universo de Yu-Gi-Oh! se compone del juego de cartas intercambiables, series de manga y anime, películas, videojuegos, entre otros.</p>
                     </div>
                     <div class="c-b">
                         <img src="img/Logo_Yu-Gi-Oh.png" class="responsive-img" alt="Logo Oficial de Yu-Gi-Oh">
@@ -45,15 +45,15 @@
                     </div>
                     <div class="c-b">
                         <h2>¿Qué es Aprende YuGiOh?</h2>
-                        <p>Aprende Yu-Gi-Oh! es un proyecto realizado sin fines de lucro, el cual tiene el propósito no solo de enseñar lo básico acerca del juego de cartas intercambiables (Trading Card Game o TCG) de Yu-Gi-Oh! sino que también de promocionarlo con aquel público que tal vez nunca le dió una oportunidad, o aquellos que deseen introducirse en este mundo. No solo se hablará del TCG sino que también de los otros aspectos de la franquicia de Yu-Gi-Oh!</p>
+                        <p>Aprende Yu-Gi-Oh! es un proyecto realizado sin fines de lucro, el cual tiene el propósito no solo de enseñar lo básico acerca del juego de cartas intercambiables (Trading Card Game o TCG) de Yu-Gi-Oh! sino que también de promocionarlo con aquel público que tal vez nunca le dió una oportunidad, o aquellos que deseen introducirse en este mundo. No solo se hablará del TCG, también comentaremos los otros aspectos de la franquicia de Yu-Gi-Oh, para que te familiarices con la saga y puedas comenzar tu viaje de la manera que más te guste.</p>
                     </div>
                 </article>
             </section>
             <hr>
-            <article>
+            <article class="justify-p">
                 <h2>En Memoria de Kazuki Takahashi</h2>
-                <p>Lamentablemente, el día 6 de julio de 2022 se encontró su cuerpo sin vida en la costa de Nago, Okinawa. No se sabe muy bien que pasó, pero según un informe del Departamento de Defensa de los Estados Unidos, un par de miembros del ejército avistaron a unos bañistas en apuros, por lo que se decidieron a acudir al rescate. Sin embargo, alguien más estaba actuando en ese momento, pues Takahashi también saltó al rescate. Desafortunadamente, se especula que la corriente lo arrastró y le impidió salir del agua. Si te interesa leer la nota completa te dejo un link <a href="https://www.clarin.com/internacional/nina-peligro-rescate-fallido-misteriosa-muerte-creador-cartas-yu-gi-oh-_0_6U0s3gadSA.html">acá</a></p>
-                <p>Un acto heroíco que le costó su vida, a cambio de ayudar a otros. Es una pena cuando alguien que te dió tanto se va de este mundo. Lo más seguro es que nunca se haya dado cuenta del impacto que tuvo en miles sino es que millones de vidas. Un héroe, no solo por lo que hizo antes de morir, sino también por su obra.</p>
+                <p>El día 6 de julio de 2022 se encontró el cuerpo sin vida de Kazuki Takahashi, el mangaka creador de Yu-Gi-Oh, en la costa de Nago, Okinawa. No se sabe muy bien que pasó, pero según un informe del Departamento de Defensa de los Estados Unidos, un par de miembros del ejército avistaron a unos bañistas en apuros, por lo que se decidieron a acudir al rescate. Sin embargo, alguien más estaba actuando en ese momento, pues Takahashi, que se encontraba de vacaciones, también saltó al rescate. Una vez el rescate fue completado exitosamente, ambos miembros del ejército se preguntaban "¿Donde está ese tipo?". Desafortunadamente, se especula que la corriente lo arrastró y le impidió salir del agua. Si te interesa leer la nota completa te dejo un link <a href="https://www.clarin.com/internacional/nina-peligro-rescate-fallido-misteriosa-muerte-creador-cartas-yu-gi-oh-_0_6U0s3gadSA.html">acá</a></p>
+                <p>Un acto heroíco que le costó su vida, a cambio de ayudar a otros. Es una pena cuando alguien que te dió tanto se va de este mundo. Lo más seguro es que nunca se haya dado cuenta del impacto que tuvo en miles sino es que millones de vidas, la industria del manga y el anime no sería lo mismo sin su creación más famosa, y muchos de nosotros no seríamos igual sin su mensaje inspirador. Un héroe, no solo por lo que hizo antes de morir, sino también por su obra.</p>
                 <img id="kazuki" src="img/Kazuki_takahashi.jpg" alt="Kazuki Takahashi en 2005.">
             </article>
             <hr>
