--- a/pages/anime.html
+++ b/pages/anime.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="../img/logo.png" alt="Logo Principal de Aprende YUGIOH!">
+        <a href="../index.html"><img src="../img/logo.png" alt="Logo Principal de Aprende YUGIOH!"></a>
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
@@ -23,12 +23,12 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <!--TENGO QUE ACTUALIZAR LAS IMÁGENES, no se enfoquen en eso.-->
-        <section class="container" id="series">
+    <main class="container">
             <h1>Los Anime de YuGiOh!</h1>
-            <p>A lo largo de los años se realizaron diversas series del universo Yu-Gi-Oh, centradas en un juego de cartas muy peculiar, el <strong>Duelo de Monstruos</strong>. A través de estas series seguimos las aventuras de diversos <strong>duelistas</strong> y observamos sus partidas. Cada serie implica un "salto generacional", una nueva mecánica en el juego de cartas, actualización de reglas de juego, etcétera. Acompañame a ver la diversa variedad de series de esta franquicia:</p>
+            <p>A lo largo de los años se realizaron diversas series animadas del universo Yu-Gi-Oh, centradas en un juego de cartas muy peculiar, el <b>Duelo de Monstruos</b>. Contando con un gran éxito a nivel mundial, más y más secuelas y spin-offs surgieron, donde cada una nos ofrece una nueva locación, distintos períodos de tiempo, distintos personajes y nuevas cartas. Cada serie sería como un "salto generacional" donde el juego cambia, pero siempre manteniendo sus mecánicas básicas.
+            Acompañame a ver la diversa variedad de series de esta franquicia:</p>
             <hr>
+        <section id="series">
             <article id="TOEI" class="c-i">
                 <div class="c-a"><img src="../img/ANIME/1-S0.jpg" class="responsive-img" alt="Poster de YUGIOH por Toei Animation"></div>
                 <div class="c-b">
@@ -43,8 +43,9 @@
             <article id="DM" class="c-i">
                 <div class="c-a">
                     <h2>Yu-Gi-Oh! Duel Monsters</h2>
-                    <p>Posiblemente la más popular de todas, Yu-Gi-Oh! Duelo de Monstruos es el título de la primera serie del anime basada en el manga Yu-Gi-Oh! realizada por Nihon Ad Systems (NAS). Fue nombrada de esta manera para diferenciarla de la anterior serie y por enfocarse en los nuevos arcos argumentales donde el juego Duelo de Monstruos formaba parte central del argumento. La serie fue conocida internacionalmente simplemente como Yu-Gi-Oh!.</p>
+                    <p>Yu-Gi-Oh! Duelo de Monstruos es el título de la primera serie del anime basada en el manga Yu-Gi-Oh! realizada por Nihon Ad Systems (NAS). Fue nombrada de esta manera para diferenciarla de la anterior serie y por enfocarse en los nuevos arcos argumentales donde el juego Duelo de Monstruos formaba parte central del argumento. La serie fue conocida internacionalmente simplemente como Yu-Gi-Oh!.</p>
                     <p>Comparte elenco con la serie anterior, Yugi y el Faraón ocupando el lugar de protagonistas. Esta vez, dedicados completamente al Duelo de Monstruos, se dedican a averiguar de dónde viene el Faraón, y su verdadero nombre.</p>
+                    <p>Al haber sido la primera en distribuirse internacionalmente y presentar el Duelo de Monstruos al mundo, fue una sensación global. Es posiblemente la serie más conocida de Yu-Gi-Oh y con el elenco más recordado.</p>
                 </div>
                 <div class="c-b"><img src="../img/ANIME/2-DM.jpg" class="responsive-img" alt="Imagen promocional de Yugioh Duel Monsters"></div>
             </article>
@@ -103,7 +104,7 @@
                 </div>
                 <div class="c-b"><img src="../img/ANIME/8-SEVENS.jpg" class="responsive-img" alt="Poster de Yugioh SEVENS"></div>
             </article>
-        </section> 
+        </section>
     </main>
     <footer>
         <p>footer de ejemplo</p>
