--- a/pages/cartas.html
+++ b/pages/cartas.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="../img/logo.png" alt="Logo Principal de Aprende YUGIOH!">
+        <a href="../index.html"><img src="../img/logo.png" alt="Logo Principal de Aprende YUGIOH!"></a>
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
