--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="../img/logo.png" alt="Logo Principal de Aprende YUGIOH!">
+        <a href="../index.html"><img src="../img/logo.png" alt="Logo Principal de Aprende YUGIOH!"></a>
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
@@ -23,28 +23,36 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="container">
-            <h1>Videojuegos de Yu-Gi-Oh!</h1>
+    <main class="container" id="juegos">
+        <h1>Videojuegos de Yu-Gi-Oh!</h1>
+        <article class="justify-p">
             <h2>Yu-Gi-Oh! en línea</h2>
             <p>Al tratarse de una franquicia tan famosa y relevante a lo largo de los años, fueron lanzados diversos videojuegos que hoy en día se consideran obsoletos.
             Con la evolución constante del juego de cartas, la llegada de internet y la popularidad de los juegos en línea, la creación de un juego "definitivo" de Yu-Gi-Oh era un paso claro a tomar. Esto significa que los usuarios no deberían comprar videojuegos muy similares entre sí con tal de obtener las mecánicas más nuevas, sino que simplemente podrían disfrutar de un solo juego que cuente con todas las mecánicas que les gustan. Desde el punto de vista de la empresa, centrar sus desarrolladores en un solo juego, permite un mantenimiento, actualización y balanceo mucho más eficientes.</p>
-            <article>
+        </article>
+        <article class="c-i">
+            <div class="c-a">
                 <h2>Yu-Gi-Oh! Duel Links</h2>
-                <p>Yu-Gi-Oh! Duel Links es un videojuego gratuito para teléfonos Android e iOS que también cuenta con una versión para PC a través de la plataforma Steam. Es la versión móvil del TCG de Yu-Gi-Oh!, presentando un formato más reducido, donde cada jugador cuenta con mazos reducidos, menos puntos de vida (4000 en vez de 8000) y donde hay habilidades especiales icónicas de los personajes de la serie que están diseñadas para ayudarnos durante nuestros duelos.</p>
-                <p>El juego cuenta con una página hecha por Konami, que nos da detalles sobre el juego y nos proporciona links de descarga para el mismo, se puede acceder a esa página haciendo click <a href="https://www.konami.com/yugioh/duel_links/en/">aquí</a> o en la imagen del logo a la derecha. También puedes obtener información del juego a través de la wiki de Yu-Gi-Oh! en español haciendo click <a href="https://yugioh.fandom.com/es/wiki/Yu-Gi-Oh!_Duel_Links">aquí</a>.</p>
-                <p>A través de este videojuego es posible experimentar una versión más veloz, dinámica y casual de la experiencia de juego del TCG clásico. Es un gran punto de entrada a la franquicia, a través del cual conocerás a los diversos personajes de este pintoresco mundo. Quizás eso te motive a darle una oportunidad a cualquiera de las <a href="anime.html">series anime</a> que estos protagonizan.</p>
-                <a href="https://www.konami.com/yugioh/duel_links/en/"><img src="../img/JUEGOS/DUELLINKS.png" alt="Logo oficial de Yu-Gi-Oh! Duel Links"></a>
-            </article>
-            <article>
+                <p>Yu-Gi-Oh! Duel Links es un videojuego gratuito para teléfonos Android e iOS que también cuenta con una versión para PC a través de la plataforma Steam. Es la versión móvil del TCG de Yu-Gi-Oh!, presentando un formato más reducido, donde cada jugador cuenta con mazos con menos cartas, menos puntos de vida (4000 en vez de 8000) y donde hay habilidades especiales, icónicas de los personajes de la serie, que están diseñadas para ayudarnos durante nuestros duelos.</p>
+                <p>El juego cuenta con una página hecha por Konami, que nos da detalles sobre el juego y nos proporciona links de descarga para el mismo, se puede acceder a esa página haciendo click <a href="https://www.konami.com/yugioh/duel_links/en/">aquí</a> o en la imagen del logo. También puedes obtener información del juego a través de la wiki de Yu-Gi-Oh! en español haciendo click <a href="https://yugioh.fandom.com/es/wiki/Yu-Gi-Oh!_Duel_Links">aquí</a>.</p>
+                <p>A través de este videojuego es posible experimentar una versión más veloz, dinámica y casual de la experiencia de juego del TCG clásico. Es un gran punto de entrada a lafranquicia, a través del cual conocerás a los diversos personajes de este pintoresco mundo. Quizás eso te motive a darle una oportunidad a cualquiera de las <a href="anime.html">series anime</a> que estos protagonizan.</p>
+            </div>
+            <div class="c-b">
+                <a href="https://www.konami.com/yugioh/duel_links/en/"><img class="responsive-img" src="../img/JUEGOS/DUELLINKS.png" alt="Logo oficial de Yu-Gi-Oh! Duel Links"></a>
+            </div>
+        </article>
+        <article class="c-i">
+            <div class="c-a">
+                <a href="https://www.konami.com/yugioh/masterduel/us/es/"><img class="responsive-img" src="../img/JUEGOS/MASTERDUEL.png" alt="Logo de Yu-Gi-Oh! Master Duel"></a>
+            </div>
+            <div class="c-b">
                 <h2>Yu-Gi-Oh! Master Duel</h2>
                 <p>Yu-Gi-Oh! Master Duel es un videojuego gratuito desarrollado y distribuido por el propietario de la franquicia, Konami. Este juego se encuentra disponible en diversas plataformas como Windows, Android e iOS, además de contar con versiones para las consolas de videojuegos modernas.<br>
-                El juego consiste en una simulación de los duelos con cartas en la vida real, siendo una versión mejorada de anteriores entregas de la saga. Los efectos visuales están diseñados de manera similar al anime de Yu-Gi-Oh! y las mecánicas de jugabilidad y de los duelos son directamente exportadas del <a href="/cartas.html#reglamento">manual del juego</a>.</p>
-                <p>La propia Konami lo define como "la edición definitiva del competitivo juego de cartas que lleva más de 20 años evolucionando", y la comunidad parece estar de acuerdo que esta versión es muy competente al título de la más completa. Al contar con el formato original, permite que aquellos que no disfrutan del formato reducido de Duel Links tengan una alternativa para jugar de la manera que prefieran.</p>
+                El juego consiste en una simulación de los duelos con cartas en la vida real, siendo una versión mejorada de anteriores entregas de la saga. Los efectos visuales están diseñados de  manera similar al anime de Yu-Gi-Oh! y las mecánicas de jugabilidad y de los duelos son directamente exportadas del <a href="./cartas.html#reglamento">manual del uego</a>.</p>
+                <p>La propia Konami lo define como "la edición definitiva del competitivo juego de cartas que lleva más de 20 años evolucionando", y la comunidad parece estar de acuerdo que estaversión es muy competente al título de la más completa. Al contar con el formato original, permite que aquellos que no disfrutan del formato reducido de Duel Links tenan una alternativa para jugar de la manera que prefieran.</p>
                 <p>Este juego también cuenta con un sitio web oficial, al cual podes acceder haciendo click <a href="https://www.konami.com/yugioh/masterduel/us/es/">aquí</a> o en su respectivo logo.</p>
-                <a href="https://www.konami.com/yugioh/masterduel/us/es/"><img src="../img/JUEGOS/MASTERDUEL.png" alt="Logo de Yu-Gi-Oh! Master Duel"></a>
-            </article>
-        </section>
+            </div>
+        </article>
     </main>
     <footer>
         <p>footer de ejemplo</p>
