Recta final Empece a corregir la estructura de cartas.html. Agregué las tipografías, retoques estéticos y leves correcciones al contenido.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Aprende YuGiOh!</title>
     <link href="styles.css" rel="stylesheet">
     <link rel="icon" href="./img/ico.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -36,12 +39,14 @@
                     </div>
                     <div class="c-b">
                         <img src="img/Logo_Yu-Gi-Oh.png" class="responsive-img" alt="Logo Oficial de Yu-Gi-Oh">
+                        <p class="caption">Logo oficial de Yugioh</p>
                     </div>
                 </article>
                 <hr>
                 <article class="c-i">
                     <div class="c-a">
                         <img src="img/logo.png" class="responsive-img" alt="Logo de Aprende Yu-Gi-Oh por Dante Cardoso">
+                        <p class="caption">Logo de Aprende YuGiOh hecho por Dante Cardoso.</p>
                     </div>
                     <div class="c-b">
                         <h2>¿Qué es Aprende YuGiOh?</h2>
@@ -50,11 +55,18 @@
                 </article>
             </section>
             <hr>
-            <article class="justify-p">
+            <article>
                 <h2>En Memoria de Kazuki Takahashi</h2>
-                <p>El día 6 de julio de 2022 se encontró el cuerpo sin vida de Kazuki Takahashi, el mangaka creador de Yu-Gi-Oh, en la costa de Nago, Okinawa. No se sabe muy bien que pasó, pero según un informe del Departamento de Defensa de los Estados Unidos, un par de miembros del ejército avistaron a unos bañistas en apuros, por lo que se decidieron a acudir al rescate. Sin embargo, alguien más estaba actuando en ese momento, pues Takahashi, que se encontraba de vacaciones, también saltó al rescate. Una vez el rescate fue completado exitosamente, ambos miembros del ejército se preguntaban "¿Donde está ese tipo?". Desafortunadamente, se especula que la corriente lo arrastró y le impidió salir del agua. Si te interesa leer la nota completa te dejo un link <a href="https://www.clarin.com/internacional/nina-peligro-rescate-fallido-misteriosa-muerte-creador-cartas-yu-gi-oh-_0_6U0s3gadSA.html">acá</a></p>
-                <p>Un acto heroíco que le costó su vida, a cambio de ayudar a otros. Es una pena cuando alguien que te dió tanto se va de este mundo. Lo más seguro es que nunca se haya dado cuenta del impacto que tuvo en miles sino es que millones de vidas, la industria del manga y el anime no sería lo mismo sin su creación más famosa, y muchos de nosotros no seríamos igual sin su mensaje inspirador. Un héroe, no solo por lo que hizo antes de morir, sino también por su obra.</p>
-                <img id="kazuki" src="img/Kazuki_takahashi.jpg" alt="Kazuki Takahashi en 2005.">
+                <div class="c-i">
+                    <div class="c-a"> 
+                        <p>El día 6 de julio de 2022 se encontró el cuerpo sin vida de Kazuki Takahashi, el mangaka creador de Yu-Gi-Oh, en la costa de Nago, Okinawa, una zona con presencia militar estadounidense en Japón. No se sabe muy bien que pasó, pero según un informe del Departamento de Defensa de los Estados Unidos, un par de miembros del ejército avistaron a unos bañistas en apuros, por lo que se decidieron a acudir al rescate. Sin embargo, alguien más estaba actuando en ese momento, pues Takahashi, que se encontraba de vacaciones, también saltó al rescate. Una vez el rescate fue completado exitosamente, ambos miembros del ejército se preguntaban "¿Donde está ese tipo?". Desafortunadamente, se especula que la corriente lo arrastró y le impidió salir del agua. Si te interesa leer la nota completa te dejo un link <a href="https://www.clarin.com/internacional/nina-peligro-rescate-fallido-misteriosa-muerte-creador-cartas-yu-gi-oh-_0_6U0s3gadSA.html">acá</a></p>
+                        <p>Un acto heroíco que le costó su vida, a cambio de ayudar a otros. Es una pena cuando alguien que te dió tanto se va de este mundo. Lo más seguro es que nunca se haya dado cuenta del impacto que tuvo en miles sino es que millones de vidas, la industria del manga y el anime no sería lo mismo sin su creación más famosa, y muchos de nosotros no seríamos igual sin su mensaje inspirador. Un héroe, no solo por lo que hizo antes de morir, sino también por su obra.</p>
+                    </div>
+                    <div class="c-b">
+                        <img class="responsive-img" id="kazuki" src="img/Kazuki_takahashi.jpg" alt="Kazuki Takahashi en 2005.">
+                        <p class="caption">Kazuki Takahashi en 2005.</p>
+                    </div>
+                </div>
             </article>
             <hr>
             <section>
