--- a/pages/anime.html
+++ b/pages/anime.html
@@ -6,6 +6,9 @@
     <title>Aprende YuGiOh!</title>
     <link href="../styles.css" rel="stylesheet">
     <link rel="icon" href="../img/ico.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -26,7 +29,7 @@
     <main class="container">
             <h1>Los Anime de YuGiOh!</h1>
             <p>A lo largo de los años se realizaron diversas series animadas del universo Yu-Gi-Oh, centradas en un juego de cartas muy peculiar, el <b>Duelo de Monstruos</b>. Contando con un gran éxito a nivel mundial, más y más secuelas y spin-offs surgieron, donde cada una nos ofrece una nueva locación, distintos períodos de tiempo, distintos personajes y nuevas cartas. Cada serie sería como un "salto generacional" donde el juego cambia, pero siempre manteniendo sus mecánicas básicas.
-            Acompañame a ver la diversa variedad de series de esta franquicia:</p>
+            </p><p>Acompañame a ver la diversa variedad de series de esta franquicia:</p>
             <hr>
         <section id="series">
             <article id="TOEI" class="c-i">
