--- a/pages/cartas.html
+++ b/pages/cartas.html
@@ -6,6 +6,9 @@
     <title>Aprende YuGiOh!</title>
     <link href="../styles.css" rel="stylesheet">
     <link rel="icon" href="../img/ico.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -29,32 +32,37 @@
             <h1>
             El Trading Card Game de YuGiOh
             </h1>
-            <p>Yu-Gi-Oh! Juego de Cartas Coleccionables (también conocido con su nombre en inglés como Yu-Gi-Oh! Trading Card Game y usualmente con la abreviatura TCG, adaptada al español como JCC) es el juego de cartas basado en el fenómeno manga y anime de Yu-Gi-Oh!, siendo este producido por Konami como su dueño actual. Acorde con el "Libro de los Récord Guinness" es el juego de cartas más vendido de todos los tiempos, sobrepasando las 22.000 millones de cartas vendidas desde agosto del 2009. Posiblemente el aspecto más lucrativo de esta franquicia, el TCG es jugado en todo el mundo, pero mayormente en Norte América, Europa y Australia.
-            </p>
-            <img src="../img/TCG-LOGO.png" alt="LOGO DEL TCG DE YUGIOH">
+            <div class="c-i">
+                <div class="c-a">
+                    <h2>¿Qué es el TCG?</h2>
+                    <p>Yu-Gi-Oh! Juego de Cartas Coleccionables (también conocido con su nombre en inglés como Yu-Gi-Oh! Trading Card Game y usualmente con la abreviatura TCG, adaptada al español como JCC) es el juego de cartas basado en el fenómeno manga y anime de Yu-Gi-Oh!, siendo este producido por Konami como su dueño actual. Acorde con el "Libro de los Récord Guinness" es el juego de cartas más vendido de todos los tiempos, sobrepasando las 22.000 millones de cartas vendidas desde agosto del 2009. Posiblemente el aspecto más lucrativo de esta franquicia, el TCG es jugado en todo el mundo, pero mayormente en Norte América, Europa y Australia.
+                    </p>
+                </div>
+                <div class="c-b">
+                <img class="responsive-img" src="../img/TCG-LOGO.png" alt="LOGO DEL TCG DE YUGIOH">
+                <p class="caption">Logo oficial del JCC</p>
+                </div>
+            </div>
+            <h2>¿En qué consiste?</h2>
+            <p>En este juego, dos o más personas (llamadas Duelistas) se enfrentan en un Duelo de Monstruos. En este cada jugador cuenta con un determinado número de cartas de tres diferentes clases: Cartas de Monstruo, Cartas Mágicas y Cartas de Trampa. Cada una tiene características y efectos diferentes (algunas pocas no tienen efecto) que se usan durante el Duelo con el fin de defenderse y derrotar a su adversario. Cada jugador cuenta con 8000 LP (Life Points o Puntos de Vida) y quien queda con 0 LP, o se queda sin cartas, pierde el Duelo.</p>
+            </article>
         </article>
-        <article>
-        <h2>¿En qué consiste?</h2>
-        <p>En este juego, dos o más personas (llamadas Duelistas) se enfrentan en un Duelo de Monstruos. En este cada jugador cuenta con un determinado número de cartas de tres diferentes clases: Cartas de Monstruo, Cartas Mágicas y Cartas de Trampa. Cada una tiene características y efectos diferentes (algunas pocas no tienen efecto y se permite un máximo de tres copias de una misma carta por jugador) que se usan durante el Duelo con el fin de defenderse y derrotar a su adversario. Cada jugador cuenta con 8000 LP (Life Points o Puntos de Vida) y quien queda con 0 LP, o se queda sin cartas, pierde el Duelo.</p>
-        </article>
+        <hr>
         <article>
             <h2>Aspectos Básicos</h2>
             <h3>Deck/Mazo</h3>
-                <p>En el Deck (también conocido como "baraja" en lanzamientos del JCC y "mazo" en videojuegos) se almacenan cierto numero de cartas desde un mínimo de 40 cartas hasta un máximo de 60. Es parte esencial del juego de cartas, ya que este contiene todas las Cartas Mágicas, Cartas de Trampa y la gran mayoría de Cartas de Monstruo exceptuando los Monstruos de Fusión, Monstruos de Sincronía y Monstruos XYZ (cartas que en cambio se sitúan en el Deck Extra).</p>
+                <p>El Deck (también conocido como "baraja" en lanzamientos del JCC y "mazo" en videojuegos) es el conjunto de cartas. Es parte esencial del juego, ya que este contiene todas las Cartas Mágicas, Cartas de Trampa y la gran mayoría de Cartas de Monstruo exceptuando los Monstruos de Fusión, Monstruos de Sincronía y Monstruos XYZ (cartas que en cambio se sitúan en un Deck apartado llamado Deck Extra).
+                <br>Este cuenta con ciertas limitaciones, por ejemplo; dependiendo el modo de juego, solo se podrán llevar cierta cantidad de cartas. En el formato normal, cada jugador puede llevar de 40 a 60 cartas. Es importante recordar que la cantidad de cartas también es parte de la estrategia que uno desee utilizar.</p>
             <h3>Cartas</h3>
-                <p>Una carta constituye un elemento fundamental para el juego de cartas. Representa un monstruo, Mágica o Trampa con los cuales se lleva a cabo un Duelo. Un Deck normal debe incluir entre 40 a 60 cartas, y sólo puede tenerse tres copias de la misma carta. La cantidad de cartas no siempre es un factor determinante para ganar un Duelo, es decir, un Deck con 60 cartas no asegura la victoria contra Decks con menos cartas.</p>
-                <p>Algunas cartas tienen restricción, lo que limita la cantidad de cartas iguales que un jugador puede poseer: dos, una o ninguna (prohibidas e ilegales). La lista cambia periódicamente.</p>
+                <p>Una carta, obviamente, constituye un elemento fundamental para el juego de cartas. Representa un Monstruo, una Magia o una Trampa con las cuales se lleva a cabo un Duelo. Sólo pueden llevarse tres copias de la misma carta; aunque estas tengan ilustraciones diferentes, mientras compartan nombre, no se podrán utilizar más de 3. Algunas cartas tienen restricción, lo que limita la cantidad de cartas iguales que un jugador puede poseer: dos, una o ninguna (prohibidas e ilegales). La lista cambia periódicamente.
+                <br>
+                Veamos los tipos de Cartas que hay presentes en el juego:
+                </p>
             <h3>Tipos de Cartas</h3>
-                <ul id="tipos">
-                    <li>Cartas de Monstruo: Suelen ser de color naranja. Representan a los monstruos que un jugador puede Invocar y hacer batallar contra otros o directamente contra su adversario, cada carta de monstruo cuenta con una estadística de ATK (ataque) y DEF (defensa) que determina si ganará o no un enfrentamiento contra un monstruo rival</li>
-                    <li>Cartas de Magia: Son de color verde y pueden tener varios efectos que alteran un Duelo. Suelen tener efectos que benefician al controlador de la carta, o perjudican al adversario. Puedes usar tantas Cartas Mágicas como quieras por turno. En un Deck común, las cartas mágicas ocupan una parte muy pequeña del total, menos de la mitad (entre 12 y 15 cartas). En conjunto con las Cartas de Trampa suelen formar la mitad del Deck Principal.</li>
-                    <li>Cartas de Trampa: Son cartas de color púrpura que tienen varios efectos para hacerle difícil las cosas a tu adversario o más fáciles para ti durante un Duelo. Estas deben ser colocadas boca abajo en la Zona de Magia y Trampas (véase Cómo Jugar) y generalmente, solo pueden ser activadas después de que el turno donde fueron colocadas haya terminado.</li>
-                        <ul>
-                            <li>Normales</li>
-                            <li>Continuas</li>
-                            <li>de Contraefecto</li>
-                        </ul>
-                </ul>
+            <p>Cartas de Monstruo: Suelen ser de color naranja. Representan a los monstruos que un jugador puede Invocar y hacer batallar contra otros o directamente contra su adversario, cada carta de monstruo cuenta con una estadística de ATK (ataque) y DEF (defensa) que determina si ganará o no un enfrentamiento contra un monstruo rival.</p>
+            <p>Cartas de Magia: Son de color verde y pueden tener varios efectos que alteran un Duelo. Suelen tener efectos que benefician al controlador de la carta, o perjudican al adversario. Puedes usar tantas Cartas Mágicas como quieras por turno. En un Deck común, las cartas mágicas ocupan una parte muy pequeña del total, menos de la mitad (entre 12 y 15 cartas). En conjunto con las Cartas de Trampa suelen formar la mitad del Deck Principal.</p>
+            <p>Cartas de Trampa: Son cartas de color púrpura que tienen varios efectos para hacerle difícil las cosas a tu adversario o más fáciles para ti durante un Duelo. Estas deben ser colocadas boca abajo en la Zona de Magia y Trampas (véase Cómo Jugar) y generalmente, solo pueden ser activadas después de que el turno donde fueron colocadas haya terminado.
+            </p>
         </article>
         <article id="reglamento">
             <h2>¿Cómo Jugar Yu-Gi-Oh?</h2>
@@ -63,7 +71,7 @@
             <p>El reglamento de juego de cartas Yu-Gi-Oh! son una serie de reglas que se deben seguir durante el juego contra uno o más adversarios, y la estructura y creación de un Deck de cartas para jugar.</p>
             <p>Las Reglas Básicas del Reglamento rigen el juego y se cumplen siempre y cuando el efecto de una Carta Mágica, Monstruo de efecto o Carta de trampa no diga lo contrario.
                 En el caso de que el efecto de una carta entre en conflicto con alguna regla, el propio Reglamento dicta que el efecto de la carta tiene prioridad. El Yu-Gi-Oh! Trading Card Game es un juego muy dinámico y gran parte de su éxito se debe a esa cualidad, en la que existen efectos para "romper" sus propias reglas en beneficio del jugador.</p>
-            <img src="../img/CARTAS/page_1.jpg" alt="Carátula del Reglamento de Yugioh">
+            <img class="responsive-img" src="../img/CARTAS/page_1.jpg" alt="Carátula del Reglamento de Yugioh">
         </article>   
     </main>
     <footer>
