--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -6,6 +6,9 @@
     <title>Aprende YuGiOh!</title>
     <link href="../styles.css" rel="stylesheet">
     <link rel="icon" href="./img/ico.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -25,7 +28,7 @@
     </header>
     <main class="container" id="juegos">
         <h1>Videojuegos de Yu-Gi-Oh!</h1>
-        <article class="justify-p">
+        <article>
             <h2>Yu-Gi-Oh! en línea</h2>
             <p>Al tratarse de una franquicia tan famosa y relevante a lo largo de los años, fueron lanzados diversos videojuegos que hoy en día se consideran obsoletos.
             Con la evolución constante del juego de cartas, la llegada de internet y la popularidad de los juegos en línea, la creación de un juego "definitivo" de Yu-Gi-Oh era un paso claro a tomar. Esto significa que los usuarios no deberían comprar videojuegos muy similares entre sí con tal de obtener las mecánicas más nuevas, sino que simplemente podrían disfrutar de un solo juego que cuente con todas las mecánicas que les gustan. Desde el punto de vista de la empresa, centrar sus desarrolladores en un solo juego, permite un mantenimiento, actualización y balanceo mucho más eficientes.</p>
